# MidiMind

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.midimind-data/outputs/: arranged_b688ceda.mid
docs/: api_refactor_notes.md  arrangement_benchmark_notes.md  coze_agent_integration.md  executor_refactor_notes.md  revision_benchmark_notes.md
examples/: piano_chords.mid  simple_melody.mid  浏阳河.mid
src/arranger/: __init__.py  analyze.py  api.py  auto_fixer.py  cli.py  complexify_executor.py  conversation.py  creative_executor.py  harmony_analyzer.py  harmony_validator.py  llm_planner.py  midi_io.py  orchestrate_executor.py  storage.py  (+9 more)
static/: index.html
tests/: arrangement_benchmark_cases.py  arrangement_benchmark_runner.py  revision_benchmark_cases.py  revision_benchmark_runner.py  test_analyze.py  test_api_arrange_route.py  test_api_conversation_routes.py  test_api_helpers.py  test_arrangement_benchmark_export_tool.py  test_arrangement_benchmark_snapshot.py  test_arrangement_benchmark_summary.py  test_auto_arrange.py  test_conversation.py  test_integration.py  test_llm_planner.py  test_midi_io.py  test_music_metrics.py  test_plan_schema.py  test_revision_benchmark_export_tool.py  test_revision_benchmark_snapshot.py  test_revision_benchmark_summary.py  test_revision_executor.py  test_revision_intent_benchmarks.py  test_revision_workflow_benchmarks.py  test_services.py  test_session_logger.py  test_templates.py  test_validators.py
tools/: export_arrangement_benchmark_snapshot.py  export_revision_benchmark_snapshot.py
(+49 files in other folders)
