[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "midimind"
version = "0.1.0"
description = "MidiMind - AI 驱动的 MIDI 编曲助手"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "MidiMind Team" }
]
dependencies = [
    "mido>=1.3.0",
    "pydantic>=2.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "anthropic>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
midimind = "arranger.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/arranger"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: exercises multi-module end-to-end flows with heavier fixtures or assets",
    "manual: requires external services, example assets, or direct script-style execution",
]
